Update authors and workspace in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
-[project]
-authors = [{ name = "dnth", email = "dickson.neoh@gmail.com" }]
+[workspace]
+authors = [{ name = "theone25", email = "mohamedbouziani25@gmail.com" }]
 name = "deimkit"
 requires-python = ">= 3.10, < 3.12"
 version = "0.2.1"
@@ -22,7 +22,7 @@ dependencies = [
 build-backend = "hatchling.build"
 requires = ["hatchling"]
 
-[tool.pixi.project]
+[tool.pixi.workspace]
 channels = ["conda-forge"]
 platforms = ["linux-64", "win-64", "osx-arm64"]
 
