--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
-[workspace]
+[project]
 authors = [{ name = "theone25", email = "mohamedbouziani25@gmail.com" }]
 name = "deimkit"
 requires-python = ">= 3.10, < 3.12"
@@ -22,7 +22,7 @@ dependencies = [
 build-backend = "hatchling.build"
 requires = ["hatchling"]
 
-[tool.pixi.workspace]
+[tool.pixi.project]
 channels = ["conda-forge"]
 platforms = ["linux-64", "win-64", "osx-arm64"]
 
